nested styling of makeup pics & content,  fixed flex-design, added flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -116,26 +116,32 @@ ion-icon {
   justify-content: center;
 }
 
-main > section:nth-of-type(1) p {
-  display: flex;
-  justify-content: center;
-}
+/*makeup pictures with content*/
 
-.image2 {
+.makeup-content {
+  /* border: 2px solid red; */
+  width: 90%;
   display: flex;
-  width: 500px;
-  height: 500px;
-}
-
-/*Bilderreihe*/
-
-.container3 {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 30px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px auto;
+
+  .image-makeup {
+    display: flex;
+    width: 100%;
+    height: 500px;
+  }
+
+  a {
+    border-bottom: 2px solid black;
+    text-transform: uppercase;
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
 }
 
 /*footer part*/
